@@ -1,6 +1,7 @@
 DIST CGI.pm-3.25.tar.gz 235166 RMD160 e0d2163ed45e25b06be0c5e941384237854b58fb SHA1 f16007f3bcf35864c940f659178c6e2bf164ae99 SHA256 948b0e975cc5ad40c98f02a819b3beee1b33c4b2db9274d12d7f59a45169dfb6
 DIST CGI.pm-3.27.tar.gz 236822 RMD160 b31fb63811b5da14f3ac5f2b77d638d736e85496 SHA1 874497c3be6de3fb5e731feab0ef78f8f93293f1 SHA256 dcc87b9093c68440ebae418c153080c8b3888617ae9824140dafe93ed63cafe9
 DIST CGI.pm-3.28.tar.gz 236940 RMD160 4a9bf829355b5178f025a4c5dce9fbea7044b0b1 SHA1 d8cb0dd3aa99f52a8cde9f0be9465c0e8bec844e SHA256 3d84f3bbcd64ca557a69e6c7df37ce2d37984bdbdd4b104583ce1db863d74bf5
+DIST CGI.pm-3.29.tar.gz 237899 RMD160 ee17aa1ffdc2a839ff8a6c341a71a37f3d01c95b SHA1 db5db74d2377a322f68bbc4798e95636d151bd45 SHA256 5aaebda7fb5b40cec981b461221410a34593281ee96799eaa3a2d9abc1d57914
 EBUILD CGI-3.25.ebuild 635 RMD160 b4894730b8290fa9cff5edbe6a7832e4875cb9a6 SHA1 a7bfc0165a6800adfcd12f011e0dbc82f199cac3 SHA256 96ce8e87ec7d996fac56dd363e5e740fc1bf210fcae6b44ffbcae1d4212150d8
 MD5 7f238743c9a407f3c3cf72a8b83f8581 CGI-3.25.ebuild 635
 RMD160 b4894730b8290fa9cff5edbe6a7832e4875cb9a6 CGI-3.25.ebuild 635
@@ -13,10 +14,14 @@ EBUILD CGI-3.28.ebuild 614 RMD160 342706431b62cfbff0cbae7b1a97b92efefb35a6 SHA1 
 MD5 a66cb704e08ea0b393e8723adfbe6f05 CGI-3.28.ebuild 614
 RMD160 342706431b62cfbff0cbae7b1a97b92efefb35a6 CGI-3.28.ebuild 614
 SHA256 44153f07965870aabb4899730e40da01cdc910076f38df0e5bd20a6e29b44ff0 CGI-3.28.ebuild 614
-MISC ChangeLog 10702 RMD160 f523308390b692832625de76e5ad3cd32cf58b0e SHA1 8cd641e1b364fe3498bd273327dca6da6ea2229f SHA256 924f8926a0576ba8c7b07a06615dae27aa47aea8ac85f9535217cf2a73c2c789
-MD5 23925714b4ede3108977975912183bc6 ChangeLog 10702
-RMD160 f523308390b692832625de76e5ad3cd32cf58b0e ChangeLog 10702
-SHA256 924f8926a0576ba8c7b07a06615dae27aa47aea8ac85f9535217cf2a73c2c789 ChangeLog 10702
+EBUILD CGI-3.29.ebuild 614 RMD160 03c84a51be3525dcf5383e82477829f15f2010c7 SHA1 80dff8d220032c6c714bdc3307d6ce9cf2f23554 SHA256 a4396f055411dbf335e27eec68b1f4dfee8cc3c06fb2d556b08ed72ef96f8d03
+MD5 e85036bcb1886ec9781365cfaa53526d CGI-3.29.ebuild 614
+RMD160 03c84a51be3525dcf5383e82477829f15f2010c7 CGI-3.29.ebuild 614
+SHA256 a4396f055411dbf335e27eec68b1f4dfee8cc3c06fb2d556b08ed72ef96f8d03 CGI-3.29.ebuild 614
+MISC ChangeLog 10817 RMD160 13d4429aac1676d4cc19a9f8774397611888dbc3 SHA1 09b11d2e6a229913f7a96e5ca6106784916fa5dd SHA256 f3f91213077f1922e2f28dc26bb2036991020490cfbb901c1c29fbf8720ac0f6
+MD5 147dc83e49920f15a3054ddedec44998 ChangeLog 10817
+RMD160 13d4429aac1676d4cc19a9f8774397611888dbc3 ChangeLog 10817
+SHA256 f3f91213077f1922e2f28dc26bb2036991020490cfbb901c1c29fbf8720ac0f6 ChangeLog 10817
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -30,3 +35,6 @@ SHA256 9b6ba9b5de3248aefd7160a8447a2391972a59a0f62a77218201235f564dfcff files/di
 MD5 a983a89570872192979dcf5ea93a61a4 files/digest-CGI-3.28 235
 RMD160 6cd7ac117fd958a5c5bb98b501ce3624e9133b47 files/digest-CGI-3.28 235
 SHA256 8e0ace9a8dc20530a39720c3d9121a0117512a0b2ff677eba271d4b1a1c14dc1 files/digest-CGI-3.28 235
+MD5 0f3a6e2ff3db46c00b7b8b0430404bc5 files/digest-CGI-3.29 235
+RMD160 76c82bcb3ecd48cd9b9d216a496ce23c5939ef3a files/digest-CGI-3.29 235
+SHA256 a557f7e1adc0329e76fb687749398ece163cc049f8868e430fffb715ee36f7b1 files/digest-CGI-3.29 235
