@@ -1,0 +1,3 @@
+MD5 56375d59265df3f2dc500261f7be095d CGI.pm-3.29.tar.gz 237899
+RMD160 ee17aa1ffdc2a839ff8a6c341a71a37f3d01c95b CGI.pm-3.29.tar.gz 237899
+SHA256 5aaebda7fb5b40cec981b461221410a34593281ee96799eaa3a2d9abc1d57914 CGI.pm-3.29.tar.gz 237899
